yilin-finished-css

--- a/page3.html
+++ b/page3.html
@@ -1,17 +1,216 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Page 3</title>
+		<meta charset="utf-8">
+	<title>Yilin Luo</title>
+	 <link rel ="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/navigation.css">
 </head>
-<body>
-
-<div class="container">
+	<body>
+			<nav class="menu">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="page1.html">Emely Rosa</a></li>
+				<li><a href="page2.html">Joe Madejki</a></li>
+				<li><a class="is-current" href="page3.html">Yilin Luo</a></li>
+			</ul>
+		</nav>
+		<div class="container">
 	
+		
+			<header>  
+					<div class="banner">
+						<a href="index.php">
+						<h1>About Yilin Luo</h1></a>
+						<div class ="slogan"> Welcome to my personal webpage! </div>
+						</div>
+			</header>
+
+			<div class="slide-container">
+				<ul class="rslides">
+					<li><img src="images/yilin_painting.jpg" alt= "Yilin's Painting Inspired by Collage"></li>
+					<li><img src="images/yilin_painting2.jpeg" alt= "Yilin's Painting of Imaginary Landscape"></li>
+					<li><img src="images/yilin_sketch2.jpeg" alt= "Yilin's Sketch Copied from Gustav Dore's Engraving"></li>
+					<li><img src="images/yilin_sketch.jpg" alt= "Yilin's Sketch Copied from Titian's The Assumption"></li>
+				</ul>
+
+				<div class="text">
+					<p>
+						I aspire to be an artist that will thrive in this digital world. While I spend numerous hours hacking away at my Computer Science major courses, I also never give up on arts in traditional, physical media. I love painting, sketching, and water color. I draw inspirations from numerous artistic practices- collage, copying old masters, and imagination. Arts keeps my mind active, and it pours in inspiration for both my Computer Science and studio art practices. 
+					</p>
+				</div>
+			</div>
+			<main class= "container">
+				<article>
+					<h2>Thank you for visiting my site!</h2>
+					<div class= "article-container">
+						<section class= "aboutme">
+							<figure class="Yilin_photo">
+								<img  src="images/yilinluo.jpg" alt= "Yilin's Photo">
+									<figcaption> </figcaption>
+							</figure>
+							<a href="About_Me.php"><h2>About Me</h2></a>
+								<p>
+								I double major in studio arts and computer science at the University of Rochester. My area of interests are Human Computer Interaction and stuio arts. I have had various experiences in volunteering and internships. My graduation year is 2021.
+								</p>
+								<a href="About_Me.php">Come and know me more!</a>
+						</section>
+
+						<section class= "education">
+							<figure class="artdesign">
+								<img  src="images/luo_yilin_design.jpg" alt= "Art Design">
+								<figcaption> </figcaption>
+							</figure>
+
+							<a href="Education.php"><h2>Education</h2></a>
+							<p>2017-2021: University of Rochester Undergraduate</p>
+							<p>2014-2017: Academy at Charlemont</p>
+							<a href="Education.php"><p>More details about my education</p></a>
+
+						</section>
+
+						<section class= "Volunteer_Internship">
+							<figure class="artworkshop">
+								<img  src="images/luo_yilin_mandala.jpg" alt= "Art Workshop">
+								<figcaption> </figcaption>
+							</figure>
+							<a href="Volunteer_Internships.php"><h2>Volunteer & Internships</h2></a>
+							<p>May 2020 - present: Web Design and Marketing Intern at Open Letter Books;</p>
+							<a href="Volunteer_Internships.php"><p>Read more about my internships and experiences </p></a>
+						</section>
 
 
+						<section class = "portfolio">
+							<figure class="portfolio_artwork">
+								<img  src="images/painting3.jpg" alt= "artwork portfolio">
+								<figcaption> </figcaption>
+							</figure>
+							<a href="Artworks.php"><h2>Artworks</h2></a>
+							<p>My favourite media are acrylic, oil painting, water color, and pencil/pen/charcoal sketches. I am also 
+								experimenting with digital arts.</p>
+							<a href="Artworks.php"><p>View more of my artworks </p></a>
+						</section>
+					</div>
+				</article>
+				<article>
+					<h2>About me</h2>
 
+						<div class= "article-container">
+							<section class= "introduction">
+								<figure class="Yilin_photo">
+									<img src="images/yilin.jpg" alt="Yilin">
+										<figcaption>Yilin Luo</figcaption>
+								</figure>
+								<div class="text-intro">
+									<h2>Who am I? Why are you looking at my website?</h2>
+									<p>
+					                    My name is Yilin Luo. I was born in Qingdao, China. I went to school in Qingdao till after middle school, then I studied at a high school in Massachusettes. Currently, I am a rising senior at University of Rochester.
+					                </p>
+					                <p>
+					                    I love arts, and I am interested in Computer Science. My goal is to pursue an interest that utilizes digital tools and artistic thinking, so I am double majoring in computer science and studio arts. I have put my studies in practice via internships and volunteers. My recent positions were Art Workshop Leader at Huther Doyle and Web Design plus Marketing Intern at Open Lettter. 
+									</p>
+								</div>
+							</section>			
+						</div>
+				</article>
+				<article>
+					<h2>My Education</h2>
 
+					<div class= "article-container">
 
-</div>
-</body>
+						<section class="introduction">
+							<figure class="Yilin_photo">
+								<img  src="images/yilin.jpg" alt="Yilin">
+								<figcaption>Yilin Luo</figcaption>
+							</figure>
+							<div class="text-intro">
+								<h2>My Schooling</h2>
+									<p>
+					                   2017-2021: University of Rochester- Computer Science (BA) and Studio Arts
+					                </p>
+					                <p>
+					                   2014-2017: Academy at Charlemont
+									</p>
+							</div>
+						</section>
+					</div>
+				</article>
+				<article>
+					<h2>My internship experiences!</h2>
+						<div class= "article-container">
+							<section class= "introduction">
+								<figure class="Yilin_photo">
+									<img  src="images/yilin.jpg" alt="Yilin">
+										<figcaption>Yilin Luo</figcaption>
+								</figure>
+									<div class="text-intro">
+										<h2>My Volunteer and Internship Experience</h2>
+											<p>
+							                   May 2020 - Present: Web Design and Marketing Intern at Open Letter;
+							                </p>
+							                <p>
+							                    Feburary 2020 - March 2020: Art Workshop Leader at Huther Doyel;
+											</p>
+											<p>
+							                    September 2018 - May 2020: LOGOS Social Media Manager;
+											</p>
+											<p>
+							                    May 2020 - Present: LOGOS Organization Manager;
+											</p>
+									</div>
+							</section>
+						</div>
+				</article>
+				<article>
+
+					<h2>Take a Look at my Arts</h2>
+
+						<div class= "article-container">
+							<section class= "portfolio_container">
+								<h2>My Artworks</h2>
+									<div class="Yilin_art1">
+										<figure class="Yilin_art1">
+											<img  src="images/yilin_sketch.jpg" alt="Yilin">
+												<figcaption>Yilin's sketch</figcaption>
+										</figure>
+									</div>
+									<div class="Yilin_art2">
+										<figure class="Yilin_art2">
+											<img  src="images/yilin_sketch2.jpeg" alt="Yilin">
+												<figcaption>Yilin's sketch 2</figcaption>
+										</figure>
+									</div>
+									<div class="Yilin_art3">
+										<figure class="Yilin_art3">
+											<img  src="images/painting3.jpg" alt="Yilin">
+												<figcaption>Yilin's painting</figcaption>
+										</figure>
+									</div>
+									<div class="Yilin_art4">
+										<figure class="Yilin_art4">
+											<img  src="images/poster_art1.jpg" alt="Yilin">
+												<figcaption>Yilin's poster art</figcaption>
+										</figure>
+									</div>
+							</section>
+						</div>
+				</article>
+				<footer>
+					<div>
+						<p>
+							<a href="http://csc174.org/lab01/yluo21/index.php">Check out my website</a>
+						</p>
+						<p>
+							Yilin Luo's <a href="https://www.linkedin.com/in/yilin-luo-0338a416b/">Linkedin</a> and <a href="https://github.com/YilinLuo">Github</a>
+						</p>
+						<p>
+							CSC 174: Advanced Front-End Web Design and Development Project 1
+						</p>
+
+					</div>
+				</footer>
+			</main>
+
+		</div>
+	</body>
 </html>
