--- a/index.html
+++ b/index.html
@@ -1,13 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Index</title>
+	<meta charset="utf-8">
+	<title>New York Team Project 1</title>
+	 <link rel ="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/navigation.css">
 </head>
-<body>
-<div class="container">
-	
+	<body>
+		<nav class="menu">
+			<ul>
+				<li><a class="is-current" href="index.html">Home</a></li>
+				<li><a href="page1.html">Emely Rosa</a></li>
+				<li><a href="page2.html">Joe Madejki</a></li>
+				<li><a href="page3.html">Yilin Luo</a></li>
+			</ul>
+		</nav>
+		<div class="container">
+			<header>
+				<h1> The New York Team </h1>
+			</header>
+			<article>
+				<div>
+					<figure>
+						<img src="images/empic.jpeg" alt="picture of Emely"/>
+						<figcaption>Emely Rosa-Ortiz</figcaption>
+					</figure>
+					<h2> Emely Rosa-Ortiz </h2>
+						<p> Emely is a rising senior at the University of Rochester. She is pursuing a B.A in Computer Science and clustering in 
+						American Sign Language and Psychopathology.</p>
+						<a href="page1.html"> Click here to Learn More </a>
+
+				</div>
+			</article>
+			<article>
+				<div>
+					<figure>
+						<img src="images/q.jpg" alt="question mark"/>
+						<figcaption></figcaption>
+					</figure>
+					<h2> Joe Madejski </h2>
+						<p> Joe attends the University of Rochester. He is pursuing a degree in Cell and Tissue Engineering with a cluster in 
+						abnormal psychology.</p>
+						<a href="page2.html"> Click here to Learn More </a>
+
+				</div>
+			</article>
+			<article>
+				<div>
+					<figure>
+						<img src="images/yilinluo.jpg" alt="picture of Yilin"/>
+						<figcaption>Yilin Luo</figcaption>
+					</figure>
+					<h2> Yilin Luo </h2>
+						<p> Yilin is a rising senior at the University of Rochester. She is double majoring in Studio Arts and Computer Science. 
+						Her areas of interests are Human-Computer Interaction and studio arts. </p>
+						<a href="page3.html"> Click here to Learn More </a>
+
+				</div>
+			</article>
 
 
-</div>
-</body>
+		</div>
+	</body>
 </html>
