--- a/page1.html
+++ b/page1.html
@@ -1,15 +1,69 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Page 1</title>
-</head>
-<body>
-<div class="container">
-	
-
-
-
-
-</div>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title> Emely Rosa-Ortiz</title>
+		 <link rel ="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/navigation.css">
+	</head>
+	<body>
+		<nav class="menu">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a class="is-current" href="page1.html">Emely Rosa</a></li>
+				<li><a href="page2.html">Joe Madejki</a></li>
+				<li><a href="page3.html">Yilin Luo</a></li>
+			</ul>
+		</nav>
+		<div class="container">
+				<header>
+				<h1>About Joe Madejski</h1>
+			</header>
+			<article>
+				<h2>Background</h2>
+				<div class="polariod">
+					<img src="images/empic.jpeg" alt="picture at the UR" class="me"/>
+				</div>
+				<div class = "in">
+					<a href="index.html" class="name">Emely Rosa Ortiz</a>
+						<ul>
+							<li> Computer Science Major </li>
+							<li> Rising Senior at the University of Rochester </li>
+							<li> Barista </li>
+						</ul>
+				</div>
+			</article>
+			<aside>
+				<div>
+					<p>I am currently a rising senior at the University of Rochester. I am pursing a B.A in computer science. While pursing my degree at the U of R, I work at Starbucks in Wilson Commons as a student supervisor. In High School, I did an internship with a program previously named ScriptEd now known as Code Now. Code Now is where I gained my interest in programming. </p>
+				</div>
+			</aside>
+			<article>
+				<h2> Education </h2>
+					<div class="grid-container">
+						<img src="images/ur.jpeg" alt="University of Rochester logo" class="item1"/>
+						<ul class="item2">
+							<li> School: University of Rochester</li>
+							<li> Major: Computer Science B.A </li>
+							<li> Class: 2021 </li>
+						</ul>
+					</div>
+					<h2> Hobbies </h2>
+						<div class="grid-container">
+							<img src="images/latte.jpeg" alt="Tulip Latte Art" class="item1"/>
+							<ul class="item2">
+								<li> Latte Art </li>
+								<li> Organization </li>
+								<li> Cooking </li>
+							</ul>
+ 						</div>
+			</article>
+			<footer> 
+				<p>CSC 174: Advanced Front-End Web Design and Development Project 1</p>
+				<p>
+					<a href="http://csc174.org/lab01/erosa4/">Check out my website</a>
+				</p>
+			</footer>
+		</div>
+	</body>
 </html>
