--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>New York Team Project 1</title>
+	 <link rel ="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/navigation.css">
 </head>
 	<body>
-		<nav>
+		<nav class="menu">
 			<ul>
-				<li><a href="index.html">Home</a></li>
+				<li><a class="is-current" href="index.html">Home</a></li>
 				<li><a href="page1.html">Emely Rosa</a></li>
 				<li><a href="page2.html">Joe Madejki</a></li>
 				<li><a href="page3.html">Yilin Luo</a></li>
