--- a/page1.html
+++ b/page1.html
@@ -3,18 +3,24 @@
 	<head>
 		<meta charset="utf-8">
 		<title> Emely Rosa-Ortiz</title>
+		 <link rel ="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/navigation.css">
 	</head>
 	<body>
-		<nav>
+		<nav class="menu">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="page1.html">Emely Rosa</a></li>
+				<li><a class="is-current" href="page1.html">Emely Rosa</a></li>
 				<li><a href="page2.html">Joe Madejki</a></li>
 				<li><a href="page3.html">Yilin Luo</a></li>
 			</ul>
 		</nav>
 		<div class="container">
+				<header>
+				<h1>About Joe Madejski</h1>
+			</header>
 			<article>
+				<h2>Background</h2>
 				<div class="polariod">
 					<img src="images/empic.jpeg" alt="picture at the UR" class="me"/>
 				</div>
@@ -33,7 +39,7 @@
 				</div>
 			</aside>
 			<article>
-				<h1> Education </h1>
+				<h2> Education </h2>
 					<div class="grid-container">
 						<img src="images/ur.jpeg" alt="University of Rochester logo" class="item1"/>
 						<ul class="item2">
@@ -42,7 +48,7 @@
 							<li> Class: 2021 </li>
 						</ul>
 					</div>
-					<h1> Hobbies </h1>
+					<h2> Hobbies </h2>
 						<div class="grid-container">
 							<img src="images/latte.jpeg" alt="Tulip Latte Art" class="item1"/>
 							<ul class="item2">
