--- a/page2.html
+++ b/page2.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
+			<meta charset="utf-8">
 		<title>Page 2</title>
+		 <link rel ="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/navigation.css">
 	</head>
 	<body>
-		<nav>
+		<nav class="menu">
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="page1.html">Emely Rosa</a></li>
-				<li><a href="page2.html">Joe Madejki</a></li>
+				<li><a class="is-current" href="page2.html">Joe Madejki</a></li>
 				<li><a href="page3.html">Yilin Luo</a></li>
 			</ul>
 		</nav>
