--- a/page3.html
+++ b/page3.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
+		<meta charset="utf-8">
 	<title>Yilin Luo</title>
+	 <link rel ="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/navigation.css">
 </head>
 	<body>
-		<nav>
+			<nav class="menu">
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="page1.html">Emely Rosa</a></li>
 				<li><a href="page2.html">Joe Madejki</a></li>
-				<li><a href="page3.html">Yilin Luo</a></li>
+				<li><a class="is-current" href="page3.html">Yilin Luo</a></li>
 			</ul>
 		</nav>
 		<div class="container">
+	
+		
 			<header>  
 					<div class="banner">
 						<a href="index.php">
-						<h1>Yilin Luo's Personal Webpage</h1></a>
+						<h1>About Yilin Luo</h1></a>
 						<div class ="slogan"> Welcome to my personal webpage! </div>
 						</div>
 			</header>
@@ -205,6 +210,7 @@
 					</div>
 				</footer>
 			</main>
+
 		</div>
 	</body>
 </html>
