some HTML Validation Fixes
-Fixed the missing lang="en"
-Fixed some missing tags and duplicate ID errors on page2.html
- Fixed the naming on page1.html

--- a/page1.html
+++ b/page1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<title> Emely Rosa-Ortiz</title>
@@ -17,7 +17,7 @@
 		</nav>
 		<div class="container">
 				<header>
-				<h1>About Joe Madejski</h1>
+				<h1>About Emely Rosa-Ortiz</h1>
 			</header>
 			<article>
 				<h2>Background</h2>
