--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-			<meta charset="utf-8">
+		<meta charset="utf-8">
 		<title>Page 2</title>
 		 <link rel ="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/navigation.css">
@@ -29,10 +29,10 @@
 
 			<aside class="side">
 				<figure>
-					<img src="images/main.jpg" alt="A dog" class="constrain" id="nav-one">
+					<img src="images/main.jpg" alt="A dog" class="constrain nav-one">
 					<figcaption>A dog. Not my dog mind you, but a dog. (Hover on me!)</figcaption>
 					<audio id="bark">
-						<source src="jmadejsk/audio/bark.mp3"> </source>
+						<source src="jmadejsk/audio/bark.mp3">
 					</audio>
 				</figure>
 			</aside>
@@ -43,10 +43,11 @@
 
 				<aside class="content">
 					<figure>
-						<img src="images/pool.jpg" alt="A pool" id="nav-one">
+						<img src="images/pool.jpg" alt="A pool" class="nav-one">
 						<figcaption>A pool. Not my pool mind you, but a pool. (Hover on me!)</figcaption>
 						<audio id="splash">
-							<source src="jmadejsk/audio/splash.mp3"></source>
+							<source src="jmadejsk/audio/splash.mp3">
+						</audio>
 					</figure>
 				</aside>
 
@@ -72,10 +73,11 @@
 
 				<aside class="side">
 					<figure>
-						<img src="images/q.jpg" alt="A question mark" class="constrain" id="nav-one">
+						<img src="images/q.jpg" alt="A question mark" class="constrain nav-one">
 						<figcaption>What comes next? (Hover on me!)</figcaption>
 						<audio id="huh">
-							<source src="jmadejsk/audio/huh.mp3"></source>
+							<source src="jmadejsk/audio/huh.mp3">
+						</audio>
 					</figure>
 				</aside>
 
@@ -85,10 +87,11 @@
 
 				<aside class="content">
 					<figure>
-						<img src="images/q2.jpg" alt="Multiple question marks" class="constrain" id="nav-one">
+						<img src="images/q2.jpg" alt="Multiple question marks" class="constrain nav-one">
 						<figcaption>What do you want to know? (Hover on me!)</figcaption>
 						<audio id="fact">
-							<source src="jmadejsk/audio/fact.mp3"></source>
+							<source src="jmadejsk/audio/fact.mp3">
+						</audio>
 					</figure>
 				</aside>
 
