--- a/page3.html
+++ b/page3.html
@@ -6,7 +6,7 @@
 	 <link rel ="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/navigation.css">
 </head>
-	<body>
+	<body class="container">
 			<nav class="menu">
 			<ul>
 				<li><a href="index.html">Home</a></li>
@@ -15,7 +15,7 @@
 				<li><a class="is-current" href="page3.html">Yilin Luo</a></li>
 			</ul>
 		</nav>
-		<div class="container">
+		<div>
 	
 		
 			<header>  
