--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
 						<figcaption>Emely Rosa-Ortiz</figcaption>
 					</figure>
 					<h2> Emely Rosa-Ortiz </h2>
-						<p> Emely is a rising senior at the University of Rochester. She is pursuing a B.A in Computer Science and clustering in 
-						American Sign Language and Psychopathology.</p>
-						<a href="page1.html"> Click here to Learn More </a>
-
+						<p> Emely is a rising senior at the University of Rochester. She is pursuing a B.A in Computer Science and clustering in American Sign Language and Psychopathology.</p>
+						<a href="page1.html"> Click here to learn more about Emely </a>
 				</div>
 			</article>
 			<article>
@@ -41,7 +39,7 @@
 					<h2> Joe Madejski </h2>
 						<p> Joe attends the University of Rochester. He is pursuing a degree in Cell and Tissue Engineering with a cluster in 
 						abnormal psychology.</p>
-						<a href="page2.html"> Click here to Learn More </a>
+						<a href="page2.html"> Click here to learn more about Joe </a>
 
 				</div>
 			</article>
@@ -54,7 +52,7 @@
 					<h2> Yilin Luo </h2>
 						<p> Yilin is a rising senior at the University of Rochester. She is double majoring in Studio Arts and Computer Science. 
 						Her areas of interests are Human-Computer Interaction and studio arts. </p>
-						<a href="page3.html"> Click here to Learn More </a>
+						<a href="page3.html"> Click here to learn more about Yilin</a>
 
 				</div>
 			</article>
