Moved h2 above images
also added a footer and margin to the footer

--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
 			</header>
 			<article>
 				<div>
+					<h2> Emely Rosa-Ortiz </h2>
 					<figure>
 						<img src="images/empic.jpeg" alt="picture of Emely"/>
 						<figcaption>Emely Rosa-Ortiz</figcaption>
 					</figure>
-					<h2> Emely Rosa-Ortiz </h2>
 						<p> Emely is a rising senior at the University of Rochester. She is pursuing a B.A in Computer Science and clustering in American Sign Language and Psychopathology.</p>
 						<a href="page1.html"> Click here to learn more about Emely </a>
 				</div>
 			</article>
 			<article>
 				<div>
+					<h2> Joe Madejski </h2>
 					<figure>
 						<img src="images/q.jpg" alt="question mark"/>
 						<figcaption></figcaption>
 					</figure>
-					<h2> Joe Madejski </h2>
 						<p> Joe attends the University of Rochester. He is pursuing a degree in Cell and Tissue Engineering with a cluster in 
 						abnormal psychology.</p>
 						<a href="page2.html"> Click here to learn more about Joe </a>
@@ -45,17 +45,18 @@
 			</article>
 			<article>
 				<div>
+					<h2> Yilin Luo </h2>
 					<figure>
 						<img src="images/yilinluo.jpg" alt="picture of Yilin"/>
 						<figcaption>Yilin Luo</figcaption>
 					</figure>
-					<h2> Yilin Luo </h2>
 						<p> Yilin is a rising senior at the University of Rochester. She is double majoring in Studio Arts and Computer Science. 
 						Her areas of interests are Human-Computer Interaction and studio arts. </p>
 						<a href="page3.html"> Click here to learn more about Yilin</a>
 
 				</div>
 			</article>
+			<footer> CSC 174: Advanced Front-End Web Development: Project 1 </footer>
 
 
 		</div>
