--- a/page3.html
+++ b/page3.html
@@ -30,7 +30,7 @@
 				<ul class="rslides">
 					<li><img src="images/yilin_painting.jpg" alt= "Yilin's Painting Inspired by Collage"></li>
 					<li><img src="images/yilin_painting2.jpeg" alt= "Yilin's Painting of Imaginary Landscape"></li>
-					<li><img src="images/yilin_sketch2.jpeg" alt= "Yilin's Sketch Copied from Gustav Dore's Engraving"></li>
+					<li ><img src="images/yilin_sketch2.jpeg" alt= "Yilin's Sketch Copied from Gustav Dore's Engraving"></li>
 					<li><img src="images/yilin_sketch.jpg" alt= "Yilin's Sketch Copied from Titian's The Assumption"></li>
 				</ul>
 
@@ -49,11 +49,10 @@
 								<img  src="images/yilinluo.jpg" alt= "Yilin's Photo">
 									<figcaption> </figcaption>
 							</figure>
-							<a href="About_Me.php"><h2>About Me</h2></a>
+							<h2>About Me</h2>
 								<p>
 								I double major in studio arts and computer science at the University of Rochester. My area of interests are Human Computer Interaction and stuio arts. I have had various experiences in volunteering and internships. My graduation year is 2021.
 								</p>
-								<a href="About_Me.php">Come and know me more!</a>
 						</section>
 
 						<section class= "education">
@@ -62,10 +61,9 @@
 								<figcaption> </figcaption>
 							</figure>
 
-							<a href="Education.php"><h2>Education</h2></a>
+							<h2>Education</h2>
 							<p>2017-2021: University of Rochester Undergraduate</p>
 							<p>2014-2017: Academy at Charlemont</p>
-							<a href="Education.php"><p>More details about my education</p></a>
 
 						</section>
 
@@ -74,9 +72,8 @@
 								<img  src="images/luo_yilin_mandala.jpg" alt= "Art Workshop">
 								<figcaption> </figcaption>
 							</figure>
-							<a href="Volunteer_Internships.php"><h2>Volunteer & Internships</h2></a>
+							<h2>Volunteer & Internships</h2>
 							<p>May 2020 - present: Web Design and Marketing Intern at Open Letter Books;</p>
-							<a href="Volunteer_Internships.php"><p>Read more about my internships and experiences </p></a>
 						</section>
 
 
@@ -85,10 +82,9 @@
 								<img  src="images/painting3.jpg" alt= "artwork portfolio">
 								<figcaption> </figcaption>
 							</figure>
-							<a href="Artworks.php"><h2>Artworks</h2></a>
-							<p>My favourite media are acrylic, oil painting, water color, and pencil/pen/charcoal sketches. I am also 
-								experimenting with digital arts.</p>
-							<a href="Artworks.php"><p>View more of my artworks </p></a>
+							<h2>Artworks</h2>
+							<p>My favourite media are acrylic, oil painting, water color, and pencil/pen/charcoal sketches. I am also experimenting with digital arts.</p>
+							
 						</section>
 					</div>
 				</article>
@@ -113,38 +109,13 @@
 							</section>			
 						</div>
 				</article>
-				<article>
-					<h2>My Education</h2>
-
-					<div class= "article-container">
-
-						<section class="introduction">
-							<figure class="Yilin_photo">
-								<img  src="images/yilin.jpg" alt="Yilin">
-								<figcaption>Yilin Luo</figcaption>
-							</figure>
-							<div class="text-intro">
-								<h2>My Schooling</h2>
-									<p>
-					                   2017-2021: University of Rochester- Computer Science (BA) and Studio Arts
-					                </p>
-					                <p>
-					                   2014-2017: Academy at Charlemont
-									</p>
-							</div>
-						</section>
-					</div>
-				</article>
+				
 				<article>
 					<h2>My internship experiences!</h2>
 						<div class= "article-container">
 							<section class= "introduction">
-								<figure class="Yilin_photo">
-									<img  src="images/yilin.jpg" alt="Yilin">
-										<figcaption>Yilin Luo</figcaption>
-								</figure>
 									<div class="text-intro">
-										<h2>My Volunteer and Internship Experience</h2>
+										<h3>My Volunteer and Internship Experience</h3>
 											<p>
 							                   May 2020 - Present: Web Design and Marketing Intern at Open Letter;
 							                </p>
@@ -167,7 +138,6 @@
 
 						<div class= "article-container">
 							<section class= "portfolio_container">
-								<h2>My Artworks</h2>
 									<div class="Yilin_art1">
 										<figure class="Yilin_art1">
 											<img  src="images/yilin_sketch.jpg" alt="Yilin">
@@ -195,22 +165,12 @@
 							</section>
 						</div>
 				</article>
-				<footer>
-					<div>
-						<p>
-							<a href="http://csc174.org/lab01/yluo21/index.php">Check out my website</a>
-						</p>
-						<p>
-							Yilin Luo's <a href="https://www.linkedin.com/in/yilin-luo-0338a416b/">Linkedin</a> and <a href="https://github.com/YilinLuo">Github</a>
-						</p>
-						<p>
-							CSC 174: Advanced Front-End Web Design and Development Project 1
-						</p>
-
-					</div>
-				</footer>
 			</main>
-
+				<footer>
+					<p> <a href="http://csc174.org/lab01/yluo21/index.php">Check out my website</a> </p>
+					<p>Yilin Luo's <a href="https://www.linkedin.com/in/yilin-luo-0338a416b/">Linkedin</a> and <a href="https://github.com/YilinLuo">Github</a> </p>
+					<p>CSC 174: Advanced Front-End Web Design and Development Project 1</p>
+				</footer>
 		</div>
 	</body>
 </html>
