--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Page 2</title>
+		<title>Joe Madejski</title>
 		 <link rel ="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/navigation.css">
 	</head>
@@ -11,7 +11,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="page1.html">Emely Rosa</a></li>
-				<li><a class="is-current" href="page2.html">Joe Madejki</a></li>
+				<li><a class="is-current" href="page2.html">Joe Madejski</a></li>
 				<li><a href="page3.html">Yilin Luo</a></li>
 			</ul>
 		</nav>
