--- a/joe.html
+++ b/joe.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Page 2</title>
+		<title>Joe Madejski</title>
 		 <link rel ="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/navigation.css">
 	</head>
